dts: Import device tree from Xiaomi
Signed-off-by: KanishkTheDerp <prometheusXderpgang@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sa6155-audio.dtsi
+++ b/arch/arm64/boot/dts/qcom/sa6155-audio.dtsi
@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2018-2019, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2021 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -183,11 +184,6 @@
 		qcom,msm-cpudai-tdm-data-out = <0>;
 		qcom,msm-cpudai-tdm-invert-sync = <0>;
 		qcom,msm-cpudai-tdm-data-delay = <0>;
-		pinctrl-names = "default", "sleep";
-		pinctrl-0 = <&ter_i2s_sck_active &ter_i2s_data0_active
-				&ter_i2s_data1_active>;
-		pinctrl-1 = <&ter_i2s_sck_sleep &ter_i2s_data0_sleep
-				&ter_i2s_data1_sleep>;
 		dai_tert_tdm_rx_0: qcom,msm-dai-q6-tdm-tert-rx-0 {
 			compatible = "qcom,msm-dai-q6-tdm";
 			qcom,msm-cpudai-tdm-dev-id = <36896>;
