--- a/arch/arm64/boot/dts/qcom/sm6150-camera.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm6150-camera.dtsi
@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2018-2019, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2021 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -157,10 +158,10 @@
 		pinctrl-names = "cam_default", "cam_suspend";
 		pinctrl-0 = <&cci0_active &cci1_active>;
 		pinctrl-1 = <&cci0_suspend &cci1_suspend>;
-		gpios = <&tlmm 32 0>,
-			<&tlmm 33 0>,
-			<&tlmm 34 0>,
-			<&tlmm 35 0>;
+		gpios = <&tlmm 17 0>,
+			<&tlmm 18 0>,
+			<&tlmm 19 0>,
+			<&tlmm 20 0>;
 		gpio-req-tbl-num = <0 1 2 3>;
 		gpio-req-tbl-flags = <1 1 1 1>;
 		gpio-req-tbl-label = "CCI_I2C_DATA0",
@@ -318,10 +319,10 @@
 				};
 
 				iova-mem-region-shared {
-					/* Shared region is 150MB long */
+					/* Shared region is 100MB long */
 					iova-region-name = "shared";
 					iova-region-start = <0x7400000>;
-					iova-region-len = <0x9600000>;
+					iova-region-len = <0x6400000>;
 					iova-region-id = <0x1>;
 					iova-granularity = <0x15>;
 					status = "ok";
@@ -330,7 +331,7 @@
 				iova-mem-region-secondary-heap {
 					/* Secondary heap region is 1MB long */
 					iova-region-name = "secheap";
-					iova-region-start = <0x10A00000>;
+					iova-region-start = <0xd800000>;
 					iova-region-len = <0x100000>;
 					iova-region-id = <0x4>;
 					status = "ok";
@@ -339,8 +340,8 @@
 				iova-mem-region-io {
 					/* IO region is approximately 3 GB */
 					iova-region-name = "io";
-					iova-region-start = <0x10B11000>;
-					iova-region-len = <0xCF4EF000>;
+					iova-region-start = <0xd911000>;
+					iova-region-len = <0xd26ef000>;
 					iova-region-id = <0x3>;
 					status = "ok";
 				};
@@ -348,7 +349,7 @@
 				iova-mem-qdss-region {
 					/* qdss region is approximately 64K */
 					iova-region-name = "qdss";
-					iova-region-start = <0x10B00000>;
+					iova-region-start = <0xd900000>;
 					iova-region-len = <0x10000>;
 					iova-region-id = <0x5>;
 					qdss-phy-addr = <0x16790000>;
@@ -855,7 +856,6 @@
 		num-a5 = <1>;
 		num-ipe = <1>;
 		num-bps = <1>;
-		icp_pc_en;
 		status = "ok";
 	};
 
