--- a/arch/arm64/boot/dts/qcom/sm6150-pinctrl.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm6150-pinctrl.dtsi
@@ -1,4 +1,5 @@
 /* Copyright (c) 2018-2019, The Linux Foundation. All rights reserved.
+ * Copyright (C) 2021 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -68,6 +69,49 @@
 				output-high; /* active low reset */
 			};
 		};
+
+		 msm_gpio_101:msm_gpio_101 {
+            mux{
+                pins="gpio101";
+                function= "gpio";
+            };
+            config {
+                pins= "gpio101";
+                drive-strength = <2>;
+                bias-disable;
+                output-low;
+            
+            };
+        };
+
+        msm_gpio_101_output_high:msm_gpio_101_output_high {
+            mux {
+                pins = "gpio101";
+                function = "gpio";
+
+            };
+            config{
+                pins = "gpio101";
+                drive-strength = <2>;
+                bias-disable;
+                output-high;
+            };
+        
+        };
+
+        msm_gpio_93:msm_gpio_93{
+            mux{
+                pins = "gpio93";
+                function = "gpio";
+            };
+            config{
+                pins = "gpio93";
+                drive-strength=<2>;
+                bias-pull-down;
+            };
+        }; 		
+
+
 
 		/* QUPv3_0 South SE mappings */
 		/* SE 0 pin mappings */
@@ -556,7 +600,7 @@
 					pins = "gpio6", "gpio7", "gpio8",
 								"gpio9";
 					drive-strength = <6>;
-					bias-disable;
+					bias-pull-down;
 				};
 			};
 		};
@@ -1079,7 +1123,7 @@
 
 				config {
 					pins = "gpio108";
-					drive-strength = <2>;   /* 2 mA */
+					drive-strength = <2>;
 					bias-pull-down;
 					input-enable;
 				};
@@ -1093,7 +1137,7 @@
 
 				config {
 					pins = "gpio108";
-					drive-strength = <16>;   /* 16 mA */
+					drive-strength = <16>;
 					bias-disable;
 					output-high;
 				};
@@ -1109,7 +1153,7 @@
 
 				config {
 					pins = "gpio109";
-					drive-strength = <2>;   /* 2 mA */
+					drive-strength = <2>;
 					bias-pull-down;
 					input-enable;
 				};
@@ -1123,7 +1167,7 @@
 
 				config {
 					pins = "gpio109";
-					drive-strength = <16>;   /* 16 mA */
+					drive-strength = <16>;
 					bias-disable;
 					output-high;
 				};
@@ -1146,57 +1190,57 @@
 			};
 		};
 
-		ter_i2s_sck_ws {
-			ter_i2s_sck_sleep: ter_i2s_sck_sleep {
+		pri_i2s_sck_ws {
+			pri_i2s_sck_sleep: pri_i2s_sck_sleep {
 				mux {
-					pins = "gpio115", "gpio116";
-					function = "ter_mi2s";
+					pins = "gpio108", "gpio109";
+					function = "mi2s_1";
 				};
 
 				config {
-					pins = "gpio115", "gpio116";
+					pins = "gpio108", "gpio109";
 					drive-strength = <2>;   /* 2 mA */
 					bias-disable;
 				};
 			};
 
-			ter_i2s_sck_active: ter_i2s_sck_active {
+			pri_i2s_sck_active: pri_i2s_sck_active {
 				mux {
-					pins = "gpio115", "gpio116";
-					function = "ter_mi2s";
+					pins = "gpio108", "gpio109";
+					function = "mi2s_1";
 				};
 
 				config {
-					pins = "gpio115", "gpio116";
+					pins = "gpio108", "gpio109";
 					drive-strength = <8>;   /* 8 mA */
-					input-enable;
 					bias-disable;
+					output-high;
 				};
 			};
 		};
 
-		ter_i2s_data0 {
-			ter_i2s_data0_sleep: ter_i2s_data0_sleep {
+		pri_i2s_data0 {
+			pri_i2s_data0_sleep: pri_i2s_data0_sleep {
 				mux {
-					pins = "gpio117";
-					function = "ter_mi2s";
+					pins = "gpio110";
+					function = "mi2s_1";
 				};
 
 				config {
-					pins = "gpio117";
+					pins = "gpio110";
 					drive-strength = <2>;   /* 2 mA */
 					bias-pull-up;
 				};
 			};
 
-			ter_i2s_data0_active: ter_i2s_data0_active {
+			pri_i2s_data0_active: pri_i2s_data0_active {
 				mux {
-					pins = "gpio117";
-					function = "ter_mi2s";
+					pins = "gpio110";
+					function = "mi2s_1";
 				};
 
 				config {
-					pins = "gpio117";
+					pins = "gpio110";
 					drive-strength = <2>;   /* 8 mA */
 					input-enable;
 					bias-disable;
@@ -1204,28 +1248,28 @@
 			};
 		};
 
-		ter_i2s_data1 {
-			ter_i2s_data1_sleep: ter_i2s_data1_sleep {
+		pri_i2s_data1 {
+			pri_i2s_data1_sleep: pri_i2s_data1_sleep {
 				mux {
-					pins = "gpio118";
-					function = "ter_mi2s";
+					pins = "gpio111";
+					function = "mi2s_1";
 				};
 
 				config {
-					pins = "gpio118";
+					pins = "gpio111";
 					drive-strength = <2>;   /* 2 mA */
 					bias-disable;
 				};
 			};
 
-			ter_i2s_data1_active: ter_i2s_data1_active {
+			pri_i2s_data1_active: pri_i2s_data1_active {
 				mux {
-					pins = "gpio118";
-					function = "ter_mi2s";
+					pins = "gpio111";
+					function = "mi2s_1";
 				};
 
 				config {
-					pins = "gpio118";
+					pins = "gpio111";
 					drive-strength = <8>;   /* 8 mA */
 					output-high;
 					bias-disable;
@@ -1544,12 +1588,12 @@
 		cam_sensor_rear_active: cam_sensor_rear_active {
 			/* RESET */
 			mux {
-				pins = "gpio47";
+				pins = "gpio47","gpio94","gpio98";
 				function = "gpio";
 			};
 
 			config {
-				pins = "gpio47";
+				pins = "gpio47","gpio94","gpio98";
 				bias-disable; /* No PULL */
 				drive-strength = <2>; /* 2 MA */
 			};
@@ -1558,12 +1602,12 @@
 		cam_sensor_rear_suspend: cam_sensor_rear_suspend {
 			/* RESET */
 			mux {
-				pins = "gpio47";
+				pins = "gpio47","gpio94","gpio98";
 				function = "gpio";
 			};
 
 			config {
-				pins = "gpio47";
+				pins = "gpio47","gpio94","gpio98";
 				bias-pull-down; /* PULL DOWN */
 				drive-strength = <2>; /* 2 MA */
 				output-low;
