drivers/input: Include Kconfig and Makefile entries
Signed-off-by: KanishkTheDerp <prometheusXderpgang@gmail.com>

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1268,6 +1268,22 @@ config TOUCHSCREEN_HIMAX_CHIPSET
 
 source "drivers/input/touchscreen/hxchipset/Kconfig"
 
+config TOUCHSCREEN_NVT_F7B
+	tristate "novatek touchscreens"
+	help
+	  Say Y here if you have a nvt touchscreen.
+	  nvt controllers are multi touch controllers which can
+	  report 5 touches at a time.
+
+	  If unsure, say N.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called nvt.
+
+source "drivers/input/touchscreen/nvt_touch_f7b/Kconfig"
+source "drivers/input/touchscreen/ft8719_touch_f7b/Kconfig"
+
+
 config TOUCHSCREEN_SYNAPTICS_DSX
         bool "Synaptics DSX Touchscreen Driver"
         depends on I2C
@@ -1287,5 +1303,7 @@ config TOUCHSCREEN_SYNAPTICS_TCM
 	  If unsure, say N.
 
 source "drivers/input/touchscreen/synaptics_tcm/Kconfig"
+
+source "drivers/input/touchscreen/xiaomi/Kconfig"
 
 endif
