--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -101,7 +101,6 @@ config ARM64
 	select HAVE_CMPXCHG_DOUBLE
 	select HAVE_CMPXCHG_LOCAL
 	select HAVE_CONTEXT_TRACKING
-	select HAVE_DEBUG_BUGVERBOSE
 	select HAVE_DEBUG_KMEMLEAK
 	select HAVE_DMA_API_DEBUG
 	select HAVE_DMA_CONTIGUOUS
@@ -225,6 +224,12 @@ config GENERIC_HWEIGHT
 config GENERIC_CSUM
         def_bool y
 
+config THERMAL_SWITCH
+    default n
+        bool "Support themral config switch"
+	    help
+	        Support themral config switch.
+
 config GENERIC_CALIBRATE_DELAY
 	def_bool y
 
@@ -256,6 +261,12 @@ config HOTPLUG_SIZE_BITS
 	 size for memory hotplug is represent as a power
 	 of 2.
 	 If unsure, stick with default value.
+
+config KERNEL_CUSTOM_FACTORY
+        default n
+        bool "Custom for hardware FACTORY_pcb"
+	    help
+	            Custom for FACTORY_pcb.
 
 config SWIOTLB
 	def_bool y
@@ -302,6 +313,13 @@ config QTI_GVM_QUIN
 		This helps to enable virtual driver support.
 		This should work on 64bit machines.
 		If you don't know what to do here, say N.
+
+config BOOT_INFO
+        bool "Boot information from bootloader"
+        default y
+        help
+          On embedded linux device, we try to collect more information from
+          bootloader to kernel. eg. powerup reason.
 
 source "init/Kconfig"
 
